--- a/index.html
+++ b/index.html
@@ -9,21 +9,9 @@
 <body>
     <h1>Tic Tac Toe</h1>
 
-    <div class="turn">
-        Player X's turn
-    </div>
+    <div class="turn"></div>
 
-    <div class="board">
-        <div id="1">X</div>
-        <div id="2">O</div>
-        <div id="3"></div>
-        <div id="4"></div>
-        <div id="5"></div>
-        <div id="6"></div>
-        <div id="7"></div>
-        <div id="8"></div>
-        <div id="9"></div>
-    </div>
+    <div class="board"></div>
 
     <script src="script.js"></script>
 </body>
