--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Tic Tac Toe</h1>
 
     <div class="turn"></div>
+    <button class="hidden">Play Again</button>
 
     <div class="board"></div>
 
